fixed toc z-index

--- a/assets/ob.css
+++ b/assets/ob.css
@@ -131,7 +131,7 @@ h2.objectbiography > a {
     position: fixed;
     right: 30px;
     top: 220px;
-    z-index: 1000;
+    z-index: 750;
     text-align: right;
 }
 .toc li:before {
